<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/item_carrinho"
        android:title="Carrinho"
        android:icon="@drawable/carrinho_vazio"
        app:showAsAction="always" />
    <item android:id="@+id/item_logout"
        android:title="Sair"
        app:showAsAction="never"
        />
</menu>